# duckdb-dns-query

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  SPEC.md  extension_config.cmake  vcpkg.json
src/: quack_extension.cpp
src/include/: dns_query_extension.hpp
test/sql/: quack.test
